# face-inference-rs

./: .gitignore  Cargo.toml  README.md
proto/: face.proto  infer.proto
retinaface/: Cargo.toml  build.rs
retinaface/libretinaface/: CMakeLists.txt
retinaface/libretinaface/src/: arcface.cpp  arcface.hpp  base_engine.cpp  base_engine.hpp  c_retinaface.cpp  c_retinaface.h  logging.hpp  retinaface.cpp  retinaface.hpp  utils.hpp
retinaface/libretinaface/src/cuda/: CMakeLists.txt  decode.cu  decode.hpp  decode_plugin.hpp  prelu.cu  prelu.h
retinaface/libretinaface/src/engine/: CMakeLists.txt  create_arcface_r50.cpp  create_mnet.cpp  create_r50.cpp  gen_wts.py  weight.cpp  weight.hpp
retinaface/src/: bindings.rs  lib.rs
rs-genproto/: .gitignore  Cargo.toml  build.rs
rs-genproto/src/: lib.rs  prost.rs
server/: Cargo.toml
server/src/: errors.rs  face.rs  face_preprocess.rs  infer_server.rs  lib.rs
